@@ -1,3 +1,9 @@
+22/4/2005:	v3.0.19
+	- fixed 16 bit color mode selection (#79312)
+
+21/4/2005:	v3.0.18
+	- added live cd entry
+
 20/4/2005:	v3.0.17
 	- taiwan text fix (#78946)
 
